--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,5 +34,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cloudinary": "^1.21.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "image-data-uri": "^2.0.1",
+    "multer": "^1.4.2"
   }
 }
